commit en ramaNew

--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
 <h1>sguifisboibfoisbidfbsdbifjsbdijfisjdbfishdbfiusb</h1>
 <h2 class="mod">Hola joaquin</h2>
 <h3 class="zava"> Wave </h3>
+
+
+<h2>asddasdasdasdasdasdasd</h2>
+<p class="ramaNew">Este es un nuevo cambio en una nueva ranma</p>
