--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <h1>sguifisboibfoisbidfbsdbifjsbdijfisjdbfishdbfiusb</h1>
 <h2 class="mod">Hola joaquin</h2>
 <h3 class="zava"> Wave </h3>
+
+<h2 class="ramaNew"> Este es el cambio realizado en la rama ramaNew</h2>
